--- a/index.html
+++ b/index.html
@@ -1,134 +1,29 @@
 <style>
-  #app {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-  }
-  .el-carousel--horizontal {
-    width: 800px;
-    margin-top: 50px;
-  }
-  .el-carousel__container {
-    height: 200px!important;
-  }
-  .project-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 900px;
-    justify-content: center;
-  }
-  .project:hover{
-    box-shadow: 0 2px 8px #bbb;
-  }
-  .project {
-    display: flex;
-    flex-direction: column;
-    background: #ffffff;
-    border-radius: 5px;
-    padding: 3px;
-    margin: 5px 12px;
-    box-shadow: 0 1px 2px #c5c5c5;
-  }
-  .project-img {
-    overflow: hidden;
-    width: 170px;
-    height: 120px;
-  }
-  .other-link {
-    display: flex;
-  }
-  .other-link a{
-    font-size: 14px;
-    margin-left: 3px;
-    color: #0366d6;
-    cursor: pointer;
-  }
-  .other-link a:hover{
-    text-decoration: underline;
-  }
-  .project-bottom{
-    display: flex;
-  }
-  .project-detail {
-    display: flex;
-  }
-  .project-detail img {
-    width: 170px;
-    height: 120px;
-    transition: all .3s;
-    border-radius: 5px;
-  }
-  .project-detail img:hover{
-    transform: scale(1.3);
-  }
-  .project-dec {
-    margin-left: 10px;
-    width: 200px;
-  }
-  .project-dec .title {
-    font-size: 17px;
-    font-weight: 700;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-  .project-dec .dec {
-    font-size: 12px;
-    height: 71px;
-    text-overflow: ellipsis;
-    overflow-y: auto;
-    margin-top: 5px;
-    color: #8492a6;
-  }
-  .project-dec .view {
-    align-items: center;
-    display: flex;
-    margin-top: 2px;
-  }
-  .project-dec .time {
-    font-size: 13px;
-    color: #b4bbbf;
-    flex: 1;
-    justify-content: flex-end;
-    display: flex;
-  }
-  .img-footer {
-    position: absolute;
-    width: 800px;
-    bottom: 0;
-    height: 35px;
-    background-color: rgba(0,0,0,.4);
-  }
-  .img-footer div {
-    color: #fff;
-    font-size: 16px;
-    margin: 5px 0 0 5px;
-  }
-  .img-list{
-    width: 400px;
-    height: 200px;
-  }
-  #bg{
-    position: fixed;
-    z-index: -2;
-    /*background-color: #edeff0;*/
-    background: url(/static/images/project/bg_01.jpg);
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-  }
-  #canvas_bg{
-    position: fixed;
-    z-index: -1;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-  }
-  #content{
-    width: 772px;
-  }
+  #app{display:flex;justify-content:center;margin-top:10px}
+  .el-carousel--horizontal{width:800px;margin-top:50px}
+  .el-carousel__container{height:200px!important}
+  .project-list{display:flex;flex-wrap:wrap;width:900px;justify-content:center}
+  .project:hover{box-shadow:0 2px 8px #bbb}
+  .project{display:flex;flex-direction:column;background:#fff;border-radius:5px;padding:3px;margin:5px 12px;box-shadow:0 1px 2px #c5c5c5}
+  .project-img{overflow:hidden;width:170px;height:120px}
+  .other-link{display:flex}
+  .other-link a{font-size:14px;margin-left:3px;color:#0366d6;cursor:pointer}
+  .other-link a:hover{text-decoration:underline}
+  .project-bottom{display:flex}
+  .project-detail{display:flex}
+  .project-detail img{width:170px;height:120px;transition:all .3s;border-radius:5px}
+  .project-detail img:hover{transform:scale(1.3)}
+  .project-dec{margin-left:10px;width:200px}
+  .project-dec .title{font-size:17px;font-weight:700;white-space:nowrap;text-overflow:ellipsis;overflow:hidden}
+  .project-dec .dec{font-size:12px;height:71px;text-overflow:ellipsis;overflow-y:auto;margin-top:5px;color:#8492a6}
+  .project-dec .view{align-items:center;display:flex;margin-top:2px}
+  .project-dec .time{font-size:13px;color:#b4bbbf;flex:1;justify-content:flex-end;display:flex}
+  .img-footer{position:absolute;width:800px;bottom:0;height:35px;background-color:rgba(0,0,0,.4)}
+  .img-footer div{color:#fff;font-size:16px;margin:5px 0 0 5px}
+  .img-list{width:400px;height:200px}
+  #bg{position:fixed;z-index:-2;background:url(/static/images/project/bg_01.jpg);left:0;right:0;bottom:0;top:0}
+  #canvas_bg{position:fixed;z-index:-1;left:0;right:0;bottom:0;top:0}
+  #content{width:772px}
 </style>
 <div id="app">
   <div>
@@ -187,6 +82,5 @@
     el: '#app'
   })
 </script>
-
 <!--          { src: '/static/js/jquery.1.7.min.js' },-->
 <!--          { src: '/static/js/background.js' }-->
